correction bug dark mode

--- a/src/app/pages/auth/signup/signup.component.scss
+++ b/src/app/pages/auth/signup/signup.component.scss
@@ -16,7 +16,7 @@ ion-menu-button {
 }
   
 ion-input, p{
-  font-size: 20px;
+  font-size: 25px;
 }
 
 #accueil_logo{
